--- a/Index.html
+++ b/Index.html
@@ -7,8 +7,16 @@
     <title>Pokedex</title>
   </head>
   <body>
-    <h1>Pokedex</h1>
-    <div class="pokeContainer" id="pokeContainer"></div>
+    <header>
+        <input type="text" id="search-input" placeholder="Search by Pokemon name">
+        <button id="search-button">Search</button>
+        <div id="search-results"></div>
+    </header>
+
+    <div class="conteudo_principal">
+        <h1>Pokedex</h1>
+        <div class="pokeContainer" id="pokeContainer"></div>
+    </div>
 
     <script src="Assets/Java/Script.js"></script>
   </body>
