--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,6 @@
         <div class="pokeContainer" id="pokeContainer"></div>
     </div>
 
-    <script src="Assets/Java/Script.js"></script>
+    <script src="Assets/JS/script.js"></script><!--nao delete essa linha-->  
   </body>
 </html>
