--- a/Index.html
+++ b/Index.html
@@ -27,10 +27,196 @@
     </div>
   </header>
 
+
+  
   <div class="conteudo-principal">
-    <h1>Pokedex</h1>
-    <div class="pokeContainer" id="pokeContainer"></div>
+    <div class="container-filters">
+      <div class="filter-by-type">
+        <span>Tipo</span>
+
+        <div class="group-type">
+          <input type="checkbox" name="normal" id="normal" />
+          <label for="normal">Normal</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="fire" id="fire" />
+          <label for="fire">Fire</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="water" id="water" />
+          <label for="water">Water</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="electric" id="electric" />
+          <label for="electric">Electric</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="grass" id="grass" />
+          <label for="grass">Grass</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="ice" id="ice" />
+          <label for="ice">Ice</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="fighting" id="fighting" />
+          <label for="fighting">Fighting</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="poison" id="poison" />
+          <label for="poison">Poison</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="ground" id="ground" />
+          <label for="ground">Ground</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="flying" id="flying" />
+          <label for="flying">Flying</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="psychic" id="psychic" />
+          <label for="psychic">Psychic</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="bug" id="bug" />
+          <label for="bug">Bug</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="rock" id="rock" />
+          <label for="rock">Rock</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="ghost" id="ghost" />
+          <label for="ghost">Ghost</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="dragon" id="dragon" />
+          <label for="dragon">Dragon</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="dark" id="dark" />
+          <label for="dark">Dark</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="steel" id="steel" />
+          <label for="steel">Steel</label>
+        </div>
+        <div class="group-type">
+          <input type="checkbox" name="fairy" id="fairy" />
+          <label for="fairy">Fairy</label>
+        </div>
+      </div>
+    </div>
+    <div class="icon-filter ">
+      <img src="Assets/img/filtro.png" alt="Ícone" class="icon-filter-img">
+      <h1>Pokedex</h1>
+    </div>
+    
+
+
+
+
+
+
+
+
+
+
+
+
+      <div class="pokeContainer" id="pokeContainer"></div><!--nao delete essa linha-->
   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <footer>
+    <div id="footer_content">
+      <div id="footer_contacts">
+        <h1>Logo</h1>
+        <p>Pokedex GG</p>
+
+        <div id="footer_social_media">
+          <a href="#" class="footer-link" id="instagram">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+
+          <a href="#" class="footer-link" id="facebook">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+
+          <a href="#" class="footer-link" id="whatsapp">
+            <i class="fa-brands fa-whatsapp"></i>
+          </a>
+        </div>
+      </div>
+
+      <ul class="footer-list">
+        <li>
+          <h3>Foda-se</h3>
+        </li>
+        <li>
+          <a href="#" class="footer-link">Tales</a>
+        </li>
+        <li>
+          <a href="#" class="footer-link">Leonardo</a>
+        </li>
+        <li>
+          <a href="#" class="footer-link">Henrique</a>
+        </li>
+      </ul>
+
+      <ul class="footer-list">
+        <li>
+          <h3>Navegue</h3>
+        </li>
+        <li>
+          <a href="#" class="footer-link">Início</a>
+        </li>
+        <li>
+          <a href="#" class="footer-link">Perfil</a>
+        </li>
+      </ul>
+
+      <ul class="footer-list">
+        <li>
+          <h3>Contatos</h3>
+        </li>
+        <li>
+          <a href="#" class="footer-link">+55 00 90000-0000</a>
+        </li>
+        <li>
+          <a href="#" class="footer-link">IrineuVcNaoSabeNemEu@Email.edu.br</a>
+        </li>
+      </ul>
+    </div>
+
+    <div id="footer_copyright">
+      &#169
+      2080 all rights reserved
+    </div>
+  </footer>
+
   <script src="Assets/Java/Script.js"></script><!--nao delete essa linha-->
 </body>
 
