--- a/Index.html
+++ b/Index.html
@@ -155,34 +155,20 @@
       <div id="footer_contacts">
         <h1>Logo</h1>
         <p>Pokedex GG</p>
-
-        <div id="footer_social_media">
-          <a href="#" class="footer-link" id="instagram">
-            <i class="fa-brands fa-instagram"></i>
-          </a>
-
-          <a href="#" class="footer-link" id="facebook">
-            <i class="fa-brands fa-facebook-f"></i>
-          </a>
-
-          <a href="#" class="footer-link" id="whatsapp">
-            <i class="fa-brands fa-whatsapp"></i>
-          </a>
-        </div>
       </div>
 
       <ul class="footer-list">
         <li>
-          <h3>Foda-se</h3>
+          <h3>Alunos</h3>
         </li>
         <li>
-          <a href="#" class="footer-link">Tales</a>
+          <a href="" class="footer-link">Tales</a>
         </li>
         <li>
-          <a href="#" class="footer-link">Leonardo</a>
+          <a href="" class="footer-link">Leonardo</a>
         </li>
         <li>
-          <a href="#" class="footer-link">Henrique</a>
+          <a href="" class="footer-link">Henrique</a>
         </li>
       </ul>
 
@@ -191,10 +177,10 @@
           <h3>Navegue</h3>
         </li>
         <li>
-          <a href="#" class="footer-link">Início</a>
+          <a href="" class="footer-link">Início</a>
         </li>
         <li>
-          <a href="#" class="footer-link">Perfil</a>
+          <a href="" class="footer-link">Perfil</a>
         </li>
       </ul>
 
@@ -203,10 +189,10 @@
           <h3>Contatos</h3>
         </li>
         <li>
-          <a href="#" class="footer-link">+55 00 90000-0000</a>
+          <a href="" class="footer-link">+55 00 90000-0000</a>
         </li>
         <li>
-          <a href="#" class="footer-link">IrineuVcNaoSabeNemEu@Email.edu.br</a>
+          <a href="" class="footer-link">IrineuVcNaoSabeNemEu@Email.edu.br</a>
         </li>
       </ul>
     </div>
